[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uiml"
version = "0.1.2"
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "xystudio", email = "173288240@qq.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["uiml", "PySide6", "Qt", "ui", "xml", "design"]
requires-python = ">=3"
dependencies = [
    "PySide6>=6.10.0"
]

[project.urls]
Homepage = "https://github.com/xystudio889/"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]